# module-api/src/main/kotlin/sk/momosilabs/suac/api/transaction/finished/TransactionFinishedApi.kt
@@ -4,6 +4,7 @@ import io.swagger.v3.oas.annotations.Operation
 import io.swagger.v3.oas.annotations.tags.Tag
 import org.springdoc.core.annotations.ParameterObject
 import org.springframework.http.MediaType
+import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
 import sk.momosilabs.suac.api.common.dto.PageDTO
@@ -27,5 +28,16 @@ interface TransactionFinishedApi {
         @RequestBody filter: TransactionFilterDTO,
         @ParameterObject pageable: PageableDTO,
     ): PageDTO<TransactionFinishedDTO>
+
+    @Operation(summary = "Export transactions to Excel")
+    @PostMapping(
+        "$ENDPOINT_TRANSACTION_FINISHED/export",
+        produces = ["application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"],
+        consumes = [MediaType.APPLICATION_JSON_VALUE],
+    )
+    fun exportTransactions(
+        @RequestBody filter: TransactionFilterDTO,
+        @ParameterObject pageable: PageableDTO,
+    ): ResponseEntity<ByteArray>
 
 }
