# module-server/src/main/kotlin/sk/momosilabs/suac/server/transaction/finished/service/exportTransactions/ExportTransactionsUseCase.kt
@@ -1,0 +1,10 @@
+package sk.momosilabs.suac.server.transaction.finished.service.exportTransactions
+
+import org.springframework.data.domain.Pageable
+import sk.momosilabs.suac.server.transaction.finished.model.TransactionFinishedFilter
+
+interface ExportTransactionsUseCase {
+
+    fun export(filter: TransactionFinishedFilter, pageable: Pageable): ByteArray
+
+}
